force-app/main/default/objects/Impact_2023_Sessions_Type__c/Impact_2023_Sessions_Type__c.object-meta.xml
<CustomObject>
    <description>The description and attributes of a session being offered at the Westmont Impact Conference 2023.</description>
    <label>Impact 2023 Sessions Type</label>
    <nameField>
        <displayFormat>Session Type-{000000}</displayFormat>
        <label>Impact23 Sessions Types Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impact 2023 Sessions Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>