force-app/main/default/objects/Impact_2023_Sessions_Type__c/fields/Impact_2023_Presenter__c.field-meta.xml
<CustomField>
    <fullName>Impact_2023_Presenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to the presenter details.</description>
    <inlineHelpText>Look up to the presenter details.</inlineHelpText>
    <label>Impact 2023_Presenter</label>
    <referenceTo>Impact_2023_Registrant__c</referenceTo>
    <relationshipLabel>Impact 2023 Sessions Types</relationshipLabel>
    <relationshipName>Impact_2023_Sessions_Types</relationshipName>
    <type>Lookup</type>
</CustomField>