force-app/main/default/objects/Impact_2023_Sessions_Type__c/fields/Presenter_Name__c.field-meta.xml
<CustomField>
    <fullName>Presenter_Name__c</fullName>
    <formula>Impact_2023_Presenter__r.First_Name__c &amp; &quot; &quot; &amp; Impact_2023_Presenter__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presenter Name</label>
    <type>Text</type>
</CustomField>