force-app/main/default/objects/Impact_2023_Sessions_Type__c/fields/Session_Description__c.field-meta.xml
<CustomField>
    <fullName>Session_Description__c</fullName>
    <description>The full description and details about the session at Impact 2023.</description>
    <inlineHelpText>The full description and details about the session at Impact 2023.</inlineHelpText>
    <label>Session Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>