force-app/main/default/objects/Impact_2023_Sessions_Type__c/fields/Session_Presenter_Title__c.field-meta.xml
<CustomField>
    <fullName>Session_Presenter_Title__c</fullName>
    <description>The formal title of the session presenter/facilitator.</description>
    <inlineHelpText>The formal title of the session presenter/facilitator.</inlineHelpText>
    <label>Session Presenter Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>