force-app/main/default/objects/Impact_2023_Sessions_Type__c/fields/Session_Title__c.field-meta.xml
<CustomField>
    <fullName>Session_Title__c</fullName>
    <description>The title of the session at Impact 2023.</description>
    <inlineHelpText>The title of the session at Impact 2023.</inlineHelpText>
    <label>Session Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>