force-app/main/default/objects/Impact_2023_Sessions_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Session_Title__c</columns>
    <columns>Session_Description__c</columns>
    <columns>Presenter_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>